2007-07-04  Jonathon Jongsma  <jjongsma@gnome.org>

	* tests/test-context.cc: add some tests for matrix transformations and
	user-to-device coordinate mappings.  The matrix transformation 'test' does
	nothing more than call the functions to excercise them a bit, but it's
	causing an unexpected exception to be triggered when calling
	Context::set_matrix().  The odd thing is that exception.what() results in
	'success' being printed.  This requires further investigation
	Also used BOOST_CHECK_EQUAL in most places instead of BOOST_CHECK to get
	more meaningful failure messages.

2007-07-04  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/private.cc: add missing 'break;' on the I/O error case statement

2007-07-04  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.cc: when getting the source pattern of a Cairo::Context,
	check which type of Pattern it is so that we create the correct C++ wrapper.
	Without this, RefPtr<>::cast_dynamic() doesn't seem to work as we would
	expect it to.
	* tests/test-context.cc: improve the Context::get_source() /
	Context::set_source () tests now that dynamic casting works correctly

2007-07-04  Jonathon Jongsma  <jjongsma@gnome.org>

	* examples/pdf-surface/main.cc:
	* examples/png_file/main.cc:
	* examples/ps-surface/main.cc:
	* examples/svg-surface/main.cc:
	* examples/text-rotate/text-rotate.cc:
	* tests/test-context.cc: fix a bunch of minor compile errors when compiling
	with -Werror

2007-07-04  Jonathon Jongsma  <jjongsma@gnome.org>

	* configure.in: enable extra compiler warnings and -Werror if the
	CAIROMM_DEVEL environment variable is set to 'on'.  This caught the
	following mistake.
	* cairomm/pattern.cc: forgot to return the ColorStop vector

2007-07-04  Jonathon Jongsma  <jjongsma@gnome.org>

	* cairomm/context.cc: fix a FIXME to match the style of
	ScaledFont::glyph_extents since MSVC (and possibly other compilers) complain
	when allocating an array on the stack and the size of the array is not a