@@ -1,3 +1,12 @@
+2007-07-10  Jonathon Jongsma  <jjongsma@gnome.org>
+
+	* cairomm/context.cc:
+	* cairomm/context.h: add alternate API for set_dash() which takes a
+	std::vector argument instead of the slightly unexpected std::valarray
+	argument
+	* tests/test-context.cc: test that both API work correctly and compile
+	correctly without any problems
+
 2007-07-04  Jonathon Jongsma  <jjongsma@gnome.org>
 
 	* tests/test-context.cc: add some tests for matrix transformations and
